# ioalg-project2

./: BinElement.cpp  BinElement.h  Binary.cpp  Binary.h  CMakeLists.txt  ExternalHeap.cpp  ExternalHeap.h  ExternalHeapsort.cpp  ExternalHeapsort.h  InputStream.h  InputStreamA.cpp  InputStreamA.h  InputStreamB.cpp  InputStreamB.h  InputStreamC.cpp  InputStreamC.h  InputStreamD.cpp  InputStreamD.h  MinHeap.cpp  MinHeap.h  Node.cpp  Node.h  OutputStream.h  OutputStreamA.cpp  OutputStreamA.h  OutputStreamB.cpp  OutputStreamB.h  OutputStreamC.cpp  OutputStreamC.h  OutputStreamD.cpp  OutputStreamD.h  Quicksort.cpp  Quicksort.h  TreeChecker.cpp  TreeChecker.h  main.cpp
